--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
         "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
         "lightningcss-linux-x64-gnu": "^1.29.1"
+    },
+    "devDependencies": {
+        "@popperjs/core": "^2.11.6",
+        "bootstrap": "^5.2.3",
+        "laravel-datatables-vite": "^0.6.2",
+        "sass": "^1.56.1"
     }
 }
